<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ImageIcon">Image Icon</string>
    <string name="CinemasStar">CinemasStar </string>
    <string name="hint">Let\'s dive into your account!</string>
    <string name="google">Continue with Google</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="twitter">Continue with Twitter</string>
    <string name="instagram">Continue with Instagram</string>
    <string name="or">OR </string>
    <string name="back">Back </string>
    <string name="setting">Setting  </string>
    <string name="Welcome">Welcome Back  </string>
    <string name="Notification_login">Please enter your email &amp; password to sign in </string>
    <string name="RememberMe">Remember Me </string>
    <string name="ForgotPassword">Forgot Password ? </string>
    <string name="DontHaveAccount">Don\'t have an account ? Sign up</string>
    <string name="Terms"> I agree to CinesStar Terms &amp; Conditions</string>
    <string name="CompleteProfile">Complete Your Profile</string>
    <string name="quote">Add the finishing touches to your profile.Let\'s make your movie experience more social ! </string>
    <string name="EditImage">Edit Image Button </string>
    <string name="FullName">Full Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="DateOfBirth">Date Of Birth</string>
    <string name="SignIn">Sign In</string>
    <string name="signInWithPassword">Sign in with password</string>
    <string name="Avatar">Avatar</string>
    <string name="CGV">CGV</string>
    <string name="Ticket">Ticket</string>
    <string name="Showing">Showing</string>
    <string name="NewsDescription">LAY\'S CHÍNH THỨC "ĐỔ BỘ" CGV - CHILL PHIM GIÒN TAN HẾT CỠ </string>
    <string name="News">Tin mới</string>
    <string name="MembershipTier">Hạng thành viên</string>
    <string name="Booking">Đặt vé</string>
    <string name="duration">Thời lượng:</string>
    <string name="release_date">Ngày phát hành:</string>
    <string name="genres">Thể loại:</string>
    <string name="formats">Định dạng:</string>
    <string name="synopsis">Tóm tắt</string>
    <string name="watch_trailer">Xem Trailer</string>
    <string name="retry">Thử lại</string>
    <string name="trailer">Trailer</string>
    <string name="no_trailer_available">Không có trailer</string>
    <string name="comment">Bình luận</string>

</resources>