<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/layout_common_guidelines" />

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ImageIcon"
        android:scaleType="centerInside"
        android:src="@drawable/icon1"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_cinesstar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rainbow_bridge"
        android:text="@string/CinemasStar"
        android:textAlignment="center"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@id/textView_hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_30" />

    <TextView
        android:id="@+id/textView_hint_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_20"
        android:text="@string/hint"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/buttonView_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_cinesstar" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/buttonView_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top_24"
        app:layout_constraintTop_toBottomOf="@id/textView_hint_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/white"
        app:icon="@drawable/google"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@null"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonView_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_12"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:icon="@drawable/facebook"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@null"
        app:cornerRadius="@dimen/social_button_corner_radius"
        app:layout_constraintBottom_toTopOf="@id/buttonView_instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonView_google"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonView_instagram"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/instagram"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:icon="@drawable/instagram"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@null"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/social_button_corner_radius"
        app:layout_constraintBottom_toTopOf="@id/buttonView_twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonView_facebook"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonView_twitter"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/twitter"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:icon="@drawable/x"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconTint="@null"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/social_button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonView_instagram"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonView_twitter">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@drawable/ic_triangle_divider_right" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/or" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@drawable/ic_triangle_divider_left" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonView_signin"
        android:layout_marginStart="@dimen/margin_top_12"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sign in with password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:cornerRadius="@dimen/margin_top_24"
        app:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Don't have an account ? Sign up"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
