<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <ImageButton
        android:id="@+id/buttonView_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_8"
        android:src="@drawable/ic_back"
        android:background="@android:color/transparent"
        android:layout_marginStart="@dimen/margin_12"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/setting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_8"
        android:src="@drawable/ic_setting"
        android:background="@android:color/transparent"
        android:layout_marginEnd="@dimen/margin_12"
        />

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ImageIcon"
        android:scaleType="centerInside"
        android:src="@drawable/icon1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_8"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_30"
        />

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rainbow_bridge"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_30"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_welcome"
        android:paddingStart="@dimen/margin_top_24"
        android:paddingEnd="@dimen/margin_top_24" >

            <TextView
                android:id="@+id/textview_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputField_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/soft_gray"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:startIconDrawable="@drawable/ic_mail"
            app:boxStrokeWidth="0dp"
            app:layout_constraintTop_toBottomOf="@id/textview_email"
            app:startIconContentDescription="@string/email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/margin_48"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textview_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/inputField_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputField_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/soft_gray"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"
            app:startIconDrawable="@drawable/ic_password_b"
            app:endIconMode="password_toggle"
            app:boxStrokeWidth="0dp"
            app:layout_constraintTop_toBottomOf="@id/textview_password"
            android:hint="@string/password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/buttonView_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox_selector"
            android:minWidth="0dp"
            app:layout_constraintTop_toBottomOf="@id/inputField_password"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/textView_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RememberMe"
            android:layout_marginStart="@dimen/margin_12"
            app:layout_constraintStart_toEndOf="@id/buttonView_checkBox"
            app:layout_constraintTop_toTopOf="@id/buttonView_checkBox"
            app:layout_constraintBottom_toBottomOf="@id/buttonView_checkBox"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ForgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonView_checkBox"
            app:layout_constraintBottom_toBottomOf="@id/buttonView_checkBox"
            android:textStyle="bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider_73"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/margin_top_24"
        android:paddingEnd="@dimen/margin_top_24"/>

    <TextView
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DontHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/divider_73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_marginStart="@dimen/margin_top_12"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/buttonView_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>