<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_black_top">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <!-- AppBar Layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <!-- Avatar -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView_avatar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baymax"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CircleImageView" />

            <!-- Logo -->
            <ImageView
                android:id="@+id/imageView_logo"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/CinemasStar"
                android:src="@drawable/cgv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <!-- My Ticket Button -->
            <ImageButton
                android:id="@+id/imageButton_myTicket"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Ticket"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_ticket"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageButton_setting"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp" />

            <!-- Settings Button -->
            <ImageButton
                android:id="@+id/imageButton_setting"
                android:contentDescription="@string/setting"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_setting2"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Fragment Container  -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_8" />

</androidx.constraintlayout.widget.ConstraintLayout>